# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  cli.py  cooking_html.py  html.py  log.py  logging.py  page_loader.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: download_index.html
